--- a/src/sass/components/_projects.scss
+++ b/src/sass/components/_projects.scss
@@ -125,6 +125,7 @@
         height: 50%;
         width: 80%;
         font-weight: 300;
+        font-size: .8rem;
         text-transform: none;
         opacity: 0;
         visibility: hidden;
